# Document-Intelligence-Toolkit

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/document_parsers/: __init__.py  docx_parser.py  pdf_parser.py
src/intelligence/: __init__.py  comparator.py  extractor.py  summarizer.py
src/utils/: __init__.py  chunker.py  llm_factory.py  token_counter.py
tests/: __init__.py  test_chunker.py  test_intelligence.py  test_llm_factory.py  test_parsers.py  test_smoke.py
ui/: app.py  desktop_app.py
